fix status bar gap, update keybindings for windows

--- a/src/scss/4-statusbar.scss
+++ b/src/scss/4-statusbar.scss
@@ -46,6 +46,10 @@
     gap: $status-bar-item-gap;
   }
 
+  > .right-items.items-container {
+    gap: $status-bar-item-gap;
+  }
+
   // > .right-items.items-container {
   //   > [id='vscodevim.vim.showcmd']:not(
   //       :has(> .statusbar-item-label[style*='display: none'])
